<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pelotonia</string>
    <string name="app_version">2014.1.2</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Find Riders</string>
    <string name="pelotonia">Pelotonia</string>
    <string name="nav_my_profile">My Rider Profile</string>
    <string name="nav_riders">Riders</string>
    <string name="nav_register">Register</string>
    <string name="nav_safety">Safety Video</string>
    <string name="nav_about">About Pelotonia</string>
    <string name="about_version">Version %1$s</string>
    <string name="about_feedback">App Feedback</string>
    <string name="about_website">http://www.pelotonia.org/</string>
    <string name="about_pelotonia">Pelotonia is a grassroots bike tour with one goal: to end cancer. Pelotonia raises money for innovative and life saving cancer research at The Ohio State University Comprehensive Cancer Center - James Cancer Hospital and Solove Research Institute.\n\nDriven by the passion of its cyclists and volunteers, and their family and friends, Pelotonia\'s annual cycling experience will be a place of hope, energy and determination.\n\nPelotonia proudly directs 100% of every dollar raised to research. It is a community of people coming together to chase down cancer and defeat it. </string>
    <string name="about_faq">Frequently Asked Questions</string>
    <string name="about_sandlot">Created for Pelotonia by</string>
    <string name="workout_blank_fragment">No past workout found</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send_email">Send Email</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="email_subject">Thank you for your support of Pelotonia</string>
    <string name="email_message">Hello %1$s,\n\nYou have pledged to donate $%2$s to %3$s\'s Pelotonia fund. Please use the following link to complete your pledge: https://www.mypelotonia.org/%4$s\n\nThanks!\n%5$s and Pelotonia</string>

</resources>
