<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.pelotonia.android.fragments.AboutFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="org.pelotonia.android.fragments.AboutFragment">

        <TextView
            android:drawableTop="@drawable/pelotonia_logo_white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_version"
            android:textSize="18sp"
            android:background="@color/pelotonia_gray"
            android:textColor="@color/pelotonia_green"
            android:id="@+id/version_text"
            android:padding="10dp"
            android:drawablePadding="5dp"
            android:gravity="center_horizontal|center_vertical"/>
        <TextView
            android:id="@+id/feedback_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_feedback"
            android:background="@color/pelotonia_green"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:padding="15dp"
            android:gravity="center_horizontal"/>
        <TextView
            android:id="@+id/pelotonia_link_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_website"
            android:textColor="@color/pelotonia_green"
            android:background="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:padding="15dp"
            android:gravity="center_horizontal"/>
        <TextView
            android:id="@+id/about_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_pelotonia"
            android:background="@android:color/white"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:padding="15dp"/>
        <TextView
            android:id="@+id/faq_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_faq"
            android:background="@android:color/white"
            android:textColor="@color/pelotonia_green"
            android:textSize="18sp"
            android:textStyle="bold"
            android:padding="15dp"
            android:gravity="center_horizontal"/>
        <TextView
            android:id="@+id/credit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_sandlot"
            android:background="@android:color/white"
            android:textColor="@color/pelotonia_green"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:drawableBottom="@drawable/sandlot_logo"/>
    </LinearLayout>
</ScrollView>